# web-security-suite-main

./: .gitignore  AGENTS.md  README.md  deploy.sh  domains.csv.example  pyproject.toml  scan-cli.sh  scan.sh  web-security-scan.sh
.github/instructions/: version-bump.instructions.md
.github/prompts/: analizar-reporte.prompt.md  añadir-test.prompt.md  release.prompt.md
.github/workflows/: wss-scan.yml
docs/: creating-tests.md  deploy-nginx-proxy.md  planificacion-interfaz-web.md  planificacion-sqlite-auth.md  security-tests-wiki.html  tests-reference.md  usage-guide.md
tests/: conftest.py  test_block_10_product_cves.py  test_block_11_shadow_aether.py  test_block_12_ai_infrastructure.py  test_block_1_cookies.py  test_block_3_headers.py  test_block_4_info_leak.py  test_block_5_server_config.py  test_block_6_modern_headers.py  test_block_7_exposed_files.py  test_block_8_dns_email.py  test_block_9_fingerprint.py  test_sarif_reporter.py  test_scheduler.py
web/: .env.example  docker-compose.yml
web/api/: Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt  scheduler.py
web/frontend/: Dockerfile  app.js  custom.css  domains.template.csv  index.html  nginx.conf  styles.css  version.json  wiki.html
wss/: __init__.py  __main__.py  cli.py  descriptions.py
wss/core/: context.py  http_client.py  registry.py  result.py  scanner.py
wss/reporters/: __init__.py  json_reporter.py  markdown.py  sarif_reporter.py  table.py
wss/tests/: block_10_product_cves.py  block_11_shadow_aether.py  block_12_ai_infrastructure.py  block_1_cookies.py  (+8 more)
(+1 files in other folders)
